# Sermon-outliner

./: .gitignore  main.py  notes-template.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: sermon-outliner.md
Images/: quotes.avif
TheMessage/1947/: 1947-04-12-faith-is-the-substance.md  1947-11-00 Extra-fellowship.md  1947-11-02-the-angel-and-his-commission.md  1947-11-23-children-in-the-wilderness.md  1947-12-07-experiences.md  1947-12-21-experiences.md
TheMessage/1948/: 1948-00-00-prayer-line.md  1948-03-02-experiences.md  1948-03-04-the-angel-of-god.md  1948-03-05-at-thy-word-lord.md
TheMessage/1949/: 1949-07-18-i-was-not-disobedient-to-the-heavenly-vision.md  1949-12-25-the-deity-of-jesus-christ.md
TheMessage/1950/: 1950-01-00-diseases-and-afflictions.md  1950-01-10-moses-commission.md  1950-01-15-believest-thou-this.md  1950-02-00-life-story.md  1950-02-27-god-in-his-people.md  1950-03-00-gifts-and-callings-are-without-repentance.md  1950-04-05-expectations.md  1950-04-09-baptismal-service.md  1950-07-11-ministry-explained.md  1950-07-13-obey-the-voice-of-the-angel.md  1950-07-14-at-thy-word.md  1950-07-15-led-by-the-spirit.md  1950-07-16-believest-thou-this.md  1950-08-08-what-healing-is.md  1950-08-10-expectations.md  1950-08-11-the-pool-of-bethesda.md  1950-08-13 Afternoon-the-resurrection-of-lazarus.md  1950-08-13 Evening-god-revealing-himself-to-his-people.md  1950-08-14-testimony.md  1950-08-15-attitude-and-who-is-god.md  1950-08-16-looking-to-the-unseen.md  1950-08-18-it-shall-be-even-as-it-was-told-me.md  (+9 more)
(+1206 files in other folders)
